RESOLVED FIXED196925
Web Inspector: REGRESSION(r244172): crash when trying to add extra domain while inspecting JSContext
https://bugs.webkit.org/show_bug.cgi?id=196925
Summary Web Inspector: REGRESSION(r244172): crash when trying to add extra domain whi...
Devin Rousso
Reported 2019-04-15 12:06:17 PDT
.
Attachments
Patch (5.87 KB, patch)
2019-04-15 12:10 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-04-15 12:06:36 PDT
Devin Rousso
Comment 2 2019-04-15 12:10:16 PDT
Joseph Pecoraro
Comment 3 2019-04-15 12:12:20 PDT
Comment on attachment 367439 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-04-15 13:29:36 PDT
Comment on attachment 367439 [details] Patch Clearing flags on attachment: 367439 Committed r244285: <https://trac.webkit.org/changeset/244285>
WebKit Commit Bot
Comment 5 2019-04-15 13:29:37 PDT
All reviewed patches have been landed. Closing bug.
Shawn Roberts
Comment 6 2019-04-16 10:45:22 PDT
After changes in https://trac.webkit.org/changeset/244285 http/tests/inspector/network/har/har-page.html is failing on WK2 Release and Debug builds. https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Finspector%2Fnetwork%2Fhar%2Fhar-page.html Was a flaky timeout/failure in previous revisions. Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/tests/inspector/network/har/har-page-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/http/tests/inspector/network/har/har-page-actual.txt @@ -588,8 +588,7 @@ "path": "/", "expires": "", "httpOnly": false, - "secure": false, - "sameSite": "Strict" + "secure": false } ], "headers": "<filtered>", @@ -661,8 +660,7 @@ "path": "/", "expires": "", "httpOnly": false, - "secure": false, - "sameSite": "Strict" + "secure": false } ], "headers": "<filtered>",
Shawn Roberts
Comment 7 2019-04-16 10:52:38 PDT
Disregard last comment. I blamed the wrong revision.
Note You need to log in before you can comment on or make changes to this bug.