Web Inspector: REGRESSION(r244172): crash when trying to add extra domain while inspecting JSContext https://bugs.webkit.org/show_bug.cgi?id=196925 <rdar://problem/49873994>

Reviewed by Joseph Pecoraro.

Move the logic for creating the `InspectorAgent` and `InspectorDebuggerAgent` into separate
functions so that callers can be guaranteed to have a valid instance of the agent.

* inspector/JSGlobalObjectInspectorController.h:
* inspector/JSGlobalObjectInspectorController.cpp:
(Inspector::JSGlobalObjectInspectorController::connectFrontend):
(Inspector::JSGlobalObjectInspectorController::frontendInitialized):
(Inspector::JSGlobalObjectInspectorController::appendExtraAgent):
(Inspector::JSGlobalObjectInspectorController::ensureInspectorAgent): Added.
(Inspector::JSGlobalObjectInspectorController::ensureDebuggerAgent): Added.
(Inspector::JSGlobalObjectInspectorController::createLazyAgents):


Canonical link: https://commits.webkit.org/211186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244285 268f45cc-cd09-0410-ab3c-d52691b4dbfc